Tooltip Bug Fix
- fixed all the bugs found in tooltip impl(positioning, overlap on other components when opacity 0)
- some minor changes

--- a/semanticLib/resources/dashboard_template/src/components/styles/ExpandComponent.css
+++ b/semanticLib/resources/dashboard_template/src/components/styles/ExpandComponent.css
@@ -1,9 +1,12 @@
 .expand {
     position: absolute;
     cursor: pointer;
+    width: 100%;
 }
 
 .expand svg {
-    position: relative;
+    position: absolute;
     font-size: 1.3vw;
+    top: 0;
+    right: 0;
 }
